--- a/genpi-website/package.json
+++ b/genpi-website/package.json
@@ -20,7 +20,7 @@
     "markdown-to-jsx": "^7.2.1",
     "next": "13.4.9",
     "postcss": "8.4.25",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
@@ -28,6 +28,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react-typical": "^0.1.0"
   }
 }
